# seht-crafting

./: .gitignore  Cargo.toml
src/: components.rs  main.rs  requests.rs
src/components/: enchantments.rs  traits.rs
src/entities/: armour.rs  jewelry.rs  materials.rs  mod.rs  weapon.rs
src/requests/: consumable.rs  enchantment.rs  gear.rs
