[package]
name = "seht-crafting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.23.0"
shuttle-runtime = "0.23.0"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
shuttle-secrets = "0.23.0"
tokio = "1.26.0"
tracing = "0.1.37"
strum = "0.25"
strum_macros = "0.25"
regex = "1.9.3"
