[package]
name = "seht-crafting"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
shuttle-serenity = { version = "0.35.2", default-features = false, features = ["serenity-0-12-rustls_backend"] }
shuttle-runtime = "0.35.2"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
shuttle-secrets = "0.35.2"
tokio = "1.26.0"
tracing = "0.1.37"
strum = "0.25"
strum_macros = "0.25"
regex = "1.9.3"
